# py-onramp

./: .gitignore  LICENSE  README.md  _quarto.yml  book.toml  index.qmd  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
code/: dummy_train.py  hello_matplotlib.py  matrix_derivative_v1.py  matrix_derivative_v2.py  mlp_fit.py  test_matrix_derivative_v1.py  test_matrix_derivative_v2.py  test_matrix_derivative_v3.py  test_matrix_derivative_v4.py  test_matrix_derivative_v5.py
code/dummy_train/: argparse_main.py  common.py  config.toml  hydra_main.py  toml_main.py
code/dummy_train/conf/: config.yaml
code/dummy_train/conf/experiment/: default.yaml
docs/: README.md  SUMMARY.md  command-line.md  documenting.md  getting-started.md  index.md  packaging.md  parametrization.md  performance.md  testing.md  usability.md
docs/command-line/: command-line.qmd
docs/documenting/: documenting.qmd
docs/getting-started/: getting-started.qmd  hello_matplotlib.py
docs/packaging/: packaging.qmd
docs/parametrization/: parametrization.qmd
docs/performance/: performance.qmd
docs/testing/: testing.qmd
docs/usability/: usability.qmd
scripts/: hello_matplotlib.py  make-triangles.py
